src/objects/Inspections__c.object
<CustomObject>
    <fields>
        <fullName>Amount__c</fullName>
        <formula>Loan__r.Loan_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Application__c</fullName>
        <formula>Loan__r.Application__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Application No</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assigned_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned To</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <filterItems>
                <field>User.UserRole.Name</field>
                <operation>equals</operation>
                <value>Loss Verification Rep</value>
            </filterItems>
            <filterItems>
                <field>User.UserRole.Name</field>
                <operation>equals</operation>
                <value>Loss Verification Management</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Progress_Inspections</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Assignment_Queue_Age__c</fullName>
        <formula>IF( NOT( ISBLANK( DATEVALUE(Date_Assigned_to_LV_Assignment_Queue__c )) ) ,
IF( DATE( 2000 , MONTH( DATEVALUE(Date_Assigned_to_LV_Assignment_Queue__c )) , DAY( DATEVALUE(Date_Assigned_to_LV_Assignment_Queue__c )) ) &lt;= DATE( 2000 , MONTH( TODAY() ) , DAY( TODAY() ) ),
Today() - DATEVALUE(Date_Assigned_to_LV_Assignment_Queue__c ),
Today() - DATEVALUE(Date_Assigned_to_LV_Assignment_Queue__c ) -1 ),
null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Assignment Queue Age (Days)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Business_Type__c</fullName>
        <description>This is just a placeholder..  This will be replaced with a lookup into the Application table (?) for the actual business type.</description>
        <label>Business Type</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <formula>Property__r.City__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Companion__c</fullName>
        <formula>Property__r.Application__r.Companion__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Companion</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contractors_with_Commitments_10_000__c</fullName>
        <label>Contractors with Commitments &gt; $10,000</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>County__c</fullName>
        <formula>Property__r.County__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>County</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Damage_Caused_By__c</fullName>
        <label>Damage Caused By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Assigned_to_Inspector__c</fullName>
        <label>Date Assigned to Inspector</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_Assigned_to_LV_Assignment_Queue__c</fullName>
        <label>Date Assigned to LV AssignmentQueue</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_Assigned_to_Queue__c</fullName>
        <label>Date Assigned to Queue</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_Assigned_to_SLV_Queue__c</fullName>
        <label>Date Assigned to SLV Queue</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_Completed__c</fullName>
        <label>Date Completed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Disasater__c</fullName>
        <formula>Property__r.Application__r.Disaster_Declaration__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Disaster</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Disaster_Declaration__c</fullName>
        <formula>Property__r.Application__r.Disaster_Declaration__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Disaster</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Disbursement_Recommendation__c</fullName>
        <label>Disbursement Recommendation</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Est_Completion_Date__c</fullName>
        <label>Est Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Exp_To_Date_vs_Available_Funds__c</fullName>
        <label>Exp To Date vs Available Funds</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>File_Age__c</fullName>
        <description>Calculated field defined to show how long a file has been in the LV system.</description>
        <label>File Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Funds_Available__c</fullName>
        <label>Funds Available</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Furniture_Fixtures_Receipts__c</fullName>
        <description>Receipts from Furniture and Fixture UP Category</description>
        <label>Furniture &amp; Fixtures Receipts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Injection__c</fullName>
        <label>Injection</label>
        <picklist>
            <picklistValues>
                <fullName>Personal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Required</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Inspection_Name__c</fullName>
        <label>Inspection Name</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inspection_Type__c</fullName>
        <description>Placeholder, to be replaced with a lookup of the actual inspection type when available.</description>
        <label>Inspection Type</label>
        <picklist>
            <picklistValues>
                <fullName>Progress Inspection</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Inventory_Receipts__c</fullName>
        <description>Receipts from Inventory UP Category</description>
        <label>Inventory Receipts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Loan_Type__c</fullName>
        <description>Placeholder until the actual loan type field can be wired in.</description>
        <label>Loan Type</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loan__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Loan</label>
        <referenceTo>Loan__c</referenceTo>
        <relationshipName>Progress_Inspections</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Machinery_and_Equipment_Receipts__c</fullName>
        <description>Receipts from M&amp;E UP Category</description>
        <label>Machinery and Equipment Receipts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Mit_Disbursed_to_Date__c</fullName>
        <description>Disbursed to date for mitigation</description>
        <label>Disbursed to Date for Mitigation</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Mit_Disbursement_Recommended__c</fullName>
        <description>Disbursement recommended for mitigation</description>
        <label>Disbursement Recommended for Mitigation</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Mit_Required_Injection__c</fullName>
        <description>Required injection for mitigation</description>
        <label>Required Injection for Mitigation</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Mit_Total_Project_Cost__c</fullName>
        <description>Mitigation total project cost</description>
        <label>Total Project Cost for Mitigation</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Mitigation_Receipts__c</fullName>
        <description>Receipts from Mitigation UP Category</description>
        <label>Mitigation Receipts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PD__c</fullName>
        <description>Placeholder for actual Post Desktop Indicator when available.</description>
        <label>PD</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PP_Disbursed_to_Date__c</fullName>
        <description>Disbursed to date for personal property</description>
        <label>Disbursed to Date for Pers Property</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PP_Disbursement_Recommended__c</fullName>
        <description>Disbursement recommended for PP</description>
        <label>Disbursement Recommended for Pers Prop</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PP_Required_Injection__c</fullName>
        <description>Required injection for personal property</description>
        <label>Required Injection for Pers Property</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PP_Total_Project_Cost__c</fullName>
        <description>Personal property total project cost</description>
        <label>Total Project Cost for Pers Property</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Percent_Repairs_to_Date__c</fullName>
        <label>Percent Repairs to Date</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Personal_Property_Receipts__c</fullName>
        <description>Receipts from PP UP Category</description>
        <label>Personal Property Receipts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Primary_Applicant_Name__c</fullName>
        <formula>Loan__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Primary Applicant Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Cost__c</fullName>
        <label>Project Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Property_Address__c</fullName>
        <formula>Property__r.Property_Address__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Property Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_Type__c</fullName>
        <label>Property Type</label>
        <picklist>
            <picklistValues>
                <fullName>Home</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Property__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Property</label>
        <referenceTo>Property__c</referenceTo>
        <relationshipLabel>Inspections</relationshipLabel>
        <relationshipName>Inspections</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Queue_Age__c</fullName>
        <description>Calculated field defined to show how long the file has been in the queue</description>
        <label>Queue Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RE_Disbursed_to_Date__c</fullName>
        <description>RE disbursed to date</description>
        <label>Disbursed to Date for RE</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>RE_Disbursement_Recommended__c</fullName>
        <description>Disbursement recommended for RE</description>
        <label>Disbursement Recommended for RE</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>RE_Receipts__c</fullName>
        <description>Real Estate UP Category receipts</description>
        <label>RE Receipts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>RE_Required_Injection__c</fullName>
        <description>RE required injection</description>
        <label>Required Injection for RE</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>RE_Total_Project_Cost__c</fullName>
        <description>RE Total Project Cost</description>
        <label>Total Project Cost for RE</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Remaining_Repairs__c</fullName>
        <label>Remaining Repairs</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Repairs_to_Date_Are__c</fullName>
        <label>Repairs to Date Are</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLV_Queue_Age__c</fullName>
        <formula>IF( NOT( ISBLANK( DATEVALUE(Date_Assigned_to_SLV_Queue__c)) ) ,
  IF( DATE( 2000 , MONTH( DATEVALUE(Date_Assigned_to_SLV_Queue__c)) , DAY( DATEVALUE(Date_Assigned_to_SLV_Queue__c)) ) &lt;= DATE( 2000 , MONTH( TODAY() ) , DAY( TODAY() ) ),
     Today() - DATEVALUE(Date_Assigned_to_SLV_Queue__c),
     Today() - DATEVALUE(Date_Assigned_to_SLV_Queue__c) -1 ),
  null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SLV Queue Age (Days)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <formula>TEXT(Property__r.State__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Assigned</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Progress Inspection Requested</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Assigned</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending SLV Review</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Street_Address__c</fullName>
        <formula>Property__r.Property_Address__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Street Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Project_Cost_Based_On__c</fullName>
        <label>Total Project Cost Based On</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Upcoming_Commitments__c</fullName>
        <label>Upcoming Commitments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Veh_Disbursed_to_Date__c</fullName>
        <description>Disbursed to date for vehicles</description>
        <label>Disbursed to Date for Vehicles</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Veh_Disbursement_Recommended__c</fullName>
        <description>Disbursement recommended for vehicles</description>
        <label>Disbursement Recommended for Veh</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Veh_Required_Injection__c</fullName>
        <description>Required injection for vehicles</description>
        <label>Required Injection for Vehicles</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Veh_Total_Project_Cost__c</fullName>
        <description>Vehicle total project cost</description>
        <label>Total Project Cost for Vehicles</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Vehicle_Receipts__c</fullName>
        <description>Receipts from Vehicle UP Category</description>
        <label>Vehicle Receipts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Zip_Code__c</fullName>
        <formula>Property__r.Zip_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Zip Code</label>
        <type>Text</type>
    </fields>
    <label>Inspection</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Assigned_Inspections</fullName>
        <columns>NAME</columns>
        <columns>Disaster_Declaration__c</columns>
        <columns>Loan_Type__c</columns>
        <columns>Amount__c</columns>
        <columns>Assigned_To__c</columns>
        <columns>Primary_Applicant_Name__c</columns>
        <columns>Street_Address__c</columns>
        <columns>City__c</columns>
        <columns>State__c</columns>
        <columns>Zip_Code__c</columns>
        <columns>County__c</columns>
        <columns>Inspection_Type__c</columns>
        <columns>Status__c</columns>
        <columns>Assignment_Queue_Age__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Assigned</value>
        </filters>
        <label>Assigned Inspections</label>
    </listViews>
    <listViews>
        <fullName>LV_Assignment_Queue_Progress_Inspections</fullName>
        <columns>NAME</columns>
        <columns>Disasater__c</columns>
        <columns>Loan_Type__c</columns>
        <columns>Business_Type__c</columns>
        <columns>Amount__c</columns>
        <columns>Assigned_To__c</columns>
        <columns>Primary_Applicant_Name__c</columns>
        <columns>Street_Address__c</columns>
        <columns>City__c</columns>
        <columns>State__c</columns>
        <columns>Status__c</columns>
        <columns>Zip_Code__c</columns>
        <columns>County__c</columns>
        <columns>Inspection_Type__c</columns>
        <filterScope>Queue</filterScope>
        <label>LV Assignment Queue</label>
        <queue>LV_Assignment_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_Progress_Inspections</fullName>
        <columns>NAME</columns>
        <columns>Application__c</columns>
        <columns>Assigned_To__c</columns>
        <columns>Disasater__c</columns>
        <columns>Property_Address__c</columns>
        <columns>City__c</columns>
        <columns>County__c</columns>
        <columns>State__c</columns>
        <columns>Zip_Code__c</columns>
        <columns>Status__c</columns>
        <filterScope>Mine</filterScope>
        <label>My Progress Inspections</label>
    </listViews>
    <listViews>
        <fullName>Senior_Loss_Verification_Queue_Inspections</fullName>
        <filterScope>Queue</filterScope>
        <label>Senior Loss Verification Queue</label>
        <queue>Senior_Loss_Verification_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Inspection Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Inspections</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Req_Assigned_to_Field_if_status_Assigne</fullName>
        <active>true</active>
        <description>If Status = Assigned, Assigned To cannot be empty</description>
        <errorConditionFormula>Text(Status__c)  = &apos;Assigned&apos;  &amp;&amp;  Assigned_To__c =&apos;&apos;</errorConditionFormula>
        <errorMessage>Please assign this file to an inspector.  Assigned To must be selected if Status = Assigned.</errorMessage>
    </validationRules>
</CustomObject>